--- a/composer.json
+++ b/composer.json
@@ -22,15 +22,15 @@
         "squizlabs/php_codesniffer": "^2.0",
         "satooshi/php-coveralls": "^1.0",
         "phpunit/php-code-coverage": "^4.0",
-        "codacy/coverage": "dev-master",
         "scrutinizer/ocular": "^1.3",
-        "drupal/coder": "^8.2"
+        "drupal/coder": "^8.2",
+        "phpro/grumphp": "^0.11"
     },
     "scripts": {
         "phpcs": "./vendor/bin/phpcs --standard=vendor/drupal/coder/coder_sniffer/Drupal --ignore=vendor .",
         "phpcbf": "./vendor/bin/phpcbf --standard=vendor/drupal/coder/coder_sniffer/Drupal --ignore=vendor .",
         "phpunit": "./vendor/bin/phpunit --coverage-clover build/logs/clover.xml -c tests/phpunit.xml tests",
-        "codacy": "./vendor/bin/codacycoverage clover build/logs/clover.xml",
+        "grumphp": "./vendor/bin/grumphp run",
         "coveralls": "./vendor/bin/coveralls",
         "scrutinizer": "./vendor/bin/ocular code-coverage:upload --format=php-clover build/logs/clover.xml"
     },
