--- a/grumphp.yml.dist
+++ b/grumphp.yml.dist
@@ -3,7 +3,7 @@ parameters:
   bin_dir: vendor/bin
   tasks:
     phpcs:
-      standard: vendor/drupal/coder/coder_sniffer/Drupal/
+      standard: PSR2
       ignore_patterns:
         - vendor/
       triggered_by:
