--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,15 @@
         "satooshi/php-coveralls": "^1.0",
         "phpunit/php-code-coverage": "^4.0",
         "scrutinizer/ocular": "^1.3",
-        "phpro/grumphp": "^0.11"
+        "phpro/grumphp": "^0.11",
+        "jakub-onderka/php-parallel-lint": "^0.9.2",
+        "friendsofphp/php-cs-fixer": "^2.4.0",
+        "nikic/php-parser": "~2.1",
+        "sensiolabs/security-checker": "^4.1"
     },
     "scripts": {
-        "phpcs": "./vendor/bin/phpcs --standard=PSR2 --ignore=vendor .",
-        "phpcbf": "./vendor/bin/phpcbf --standard=PSR2 --ignore=vendor .",
         "phpunit": "./vendor/bin/phpunit --coverage-clover build/logs/clover.xml -c tests/phpunit.xml tests",
         "grumphp": "./vendor/bin/grumphp run",
-        "coveralls": "./vendor/bin/coveralls",
         "scrutinizer": "./vendor/bin/ocular code-coverage:upload --format=php-clover build/logs/clover.xml"
     },
     "autoload": {
