--- a/composer.json
+++ b/composer.json
@@ -18,16 +18,21 @@
     ],
     "require-dev": {
         "phpunit/phpunit": "^5.7",
+        "phpspec/phpspec": "^3.0",
         "mockery/mockery": "^0.9",
         "squizlabs/php_codesniffer": "^2.0",
         "satooshi/php-coveralls": "^1.0",
         "phpunit/php-code-coverage": "^4.0",
+        "leanphp/phpspec-code-coverage": "^3.1",
         "scrutinizer/ocular": "^1.3",
-        "phpro/grumphp": "^0.11",
+        "phpro/grumphp": "^0.12",
         "jakub-onderka/php-parallel-lint": "^0.9.2",
-        "friendsofphp/php-cs-fixer": "^2.4.0",
         "nikic/php-parser": "~2.1",
-        "sensiolabs/security-checker": "^4.1"
+        "sensiolabs/security-checker": "^4.1",
+        "phpmd/phpmd": "^2.6",
+        "sebastian/phpcpd": "^3.0",
+        "friendsofphp/php-cs-fixer": "^2.9"
+
     },
     "scripts": {
         "phpunit": "./vendor/bin/phpunit --coverage-clover build/logs/clover.xml -c tests/phpunit.xml tests",
@@ -39,5 +44,7 @@
             "drupol\\phpermutations\\": "src/",
             "drupol\\phpermutations\\Tests\\": "tests/src/"
         }
+    },
+    "require": {
     }
 }
