--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "homepage": "https://github.com/drupol/phpermutations",
     "keywords": ["math", "numbers", "permutations", "combinations", "iterators", "fibonacci", "prime numbers", "product"],
-    "license": "GPL-2.0+",
+    "license": "GPL-3.0-only",
     "support": {
         "issues": "https://github.com/drupol/phpermutations/issues",
         "source": "https://github.com/drupol/phpermutations"
@@ -16,22 +16,23 @@
             "email": "pol.dellaiera@protonmail.com"
         }
     ],
+    "require": {
+        "php": ">= 5.6"
+    },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
-        "phpspec/phpspec": "^3.0",
         "mockery/mockery": "^0.9",
         "squizlabs/php_codesniffer": "^2.0",
         "satooshi/php-coveralls": "^1.0",
         "phpunit/php-code-coverage": "^4.0",
-        "leanphp/phpspec-code-coverage": "^3.1",
         "scrutinizer/ocular": "^1.3",
-        "phpro/grumphp": "^0.12",
+        "phpro/grumphp": "^0.13",
         "jakub-onderka/php-parallel-lint": "^0.9.2",
         "nikic/php-parser": "~2.1",
         "sensiolabs/security-checker": "^4.1",
         "phpmd/phpmd": "^2.6",
         "sebastian/phpcpd": "^3.0",
-        "friendsofphp/php-cs-fixer": "^2.9"
+        "friendsofphp/php-cs-fixer": "^2.10"
 
     },
     "scripts": {
@@ -44,7 +45,5 @@
             "drupol\\phpermutations\\": "src/",
             "drupol\\phpermutations\\Tests\\": "tests/src/"
         }
-    },
-    "require": {
     }
 }
