--- a/composer.json
+++ b/composer.json
@@ -17,23 +17,10 @@
         }
     ],
     "require": {
-        "php": ">= 5.6"
+        "php": ">= 7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "mockery/mockery": "^0.9",
-        "squizlabs/php_codesniffer": "^2.0",
-        "satooshi/php-coveralls": "^1.0",
-        "phpunit/php-code-coverage": "^4.0",
-        "scrutinizer/ocular": "^1.3",
-        "phpro/grumphp": "^0.13",
-        "jakub-onderka/php-parallel-lint": "^0.9.2",
-        "nikic/php-parser": "~2.1",
-        "sensiolabs/security-checker": "^4.1",
-        "phpmd/phpmd": "^2.6",
-        "sebastian/phpcpd": "^3.0",
-        "friendsofphp/php-cs-fixer": "^2.10"
-
+        "drupol/php-conventions": "^1"
     },
     "scripts": {
         "phpunit": "./vendor/bin/phpunit --coverage-clover build/logs/clover.xml -c tests/phpunit.xml tests",
@@ -44,6 +31,11 @@
         "psr-4": {
             "drupol\\phpermutations\\": "src/",
             "drupol\\phpermutations\\Tests\\": "tests/src/"
+        }
+    },
+    "extra": {
+        "grumphp": {
+            "config-default-path": "vendor/drupol/php-conventions/config/php7/grumphp.yml"
         }
     }
 }
