--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "drupol/phpermutations",
-    "description": "Generate iterators for array permutations in an efficient way.",
+    "description": "Generators and iterators, permutations and combinations.",
     "type": "library",
     "homepage": "https://github.com/drupol/phpermutations",
     "keywords": ["math", "numbers", "permutations", "combinations", "iterators", "fibonacci", "prime numbers", "product"],
@@ -9,7 +9,6 @@
         "issues": "https://github.com/drupol/phpermutations/issues",
         "source": "https://github.com/drupol/phpermutations"
     },
-    "minimum-stability": "stable",
     "authors": [
         {
             "name": "Pol Dellaiera",
@@ -20,20 +19,10 @@
         "php": ">= 5.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "mockery/mockery": "^0.9",
-        "squizlabs/php_codesniffer": "^2.0",
-        "satooshi/php-coveralls": "^1.0",
-        "phpunit/php-code-coverage": "^4.0",
-        "scrutinizer/ocular": "^1.3",
-        "phpro/grumphp": "^0.13",
-        "jakub-onderka/php-parallel-lint": "^0.9.2",
-        "nikic/php-parser": "~2.1",
-        "sensiolabs/security-checker": "^4.1",
-        "phpmd/phpmd": "^2.6",
-        "sebastian/phpcpd": "^3.0",
-        "friendsofphp/php-cs-fixer": "^2.10"
-
+        "drupol/php-conventions": "^1.3",
+        "phpunit/phpunit": "^6",
+        "phpunit/php-code-coverage": "^5.0",
+        "scrutinizer/ocular": "^1.3"
     },
     "scripts": {
         "phpunit": "./vendor/bin/phpunit --coverage-clover build/logs/clover.xml -c tests/phpunit.xml tests",
@@ -45,5 +34,8 @@
             "drupol\\phpermutations\\": "src/",
             "drupol\\phpermutations\\Tests\\": "tests/src/"
         }
+    },
+    "config": {
+        "sort-packages": true
     }
 }
