--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ php:
   - 7.2
   - 7.3
 
+matrix:
+  allow_failures:
+  - php: 5.6
+
 install:
   - composer install
 
@@ -21,4 +25,5 @@ script:
   - composer grumphp
 
 after_success:
+  - phpenv config-rm xdebug.ini
   - composer scrutinizer
