--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
     },
     "require-dev": {
         "drupol/php-conventions": "^1.3",
-        "phpunit/phpunit": "^6",
-        "phpunit/php-code-coverage": "^5.0",
+        "phpunit/phpunit": "^5 || ^6",
+        "phpunit/php-code-coverage": "^4 || ^5",
         "scrutinizer/ocular": "^1.3"
     },
     "scripts": {
