--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,11 @@
     "require-dev": {
         "drupol/php-conventions": "^1.3",
         "phpunit/phpunit": "^5 || ^6",
-        "phpunit/php-code-coverage": "^4 || ^5",
-        "scrutinizer/ocular": "^1.3"
+        "phpunit/php-code-coverage": "^4 || ^5"
     },
     "scripts": {
         "phpunit": "./vendor/bin/phpunit --coverage-clover build/logs/clover.xml -c tests/phpunit.xml tests",
-        "grumphp": "./vendor/bin/grumphp run",
-        "scrutinizer": "./vendor/bin/ocular code-coverage:upload --format=php-clover build/logs/clover.xml"
+        "grumphp": "./vendor/bin/grumphp run"
     },
     "autoload": {
         "psr-4": {
