--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,4 +1,9 @@
-build: false
+build:
+    nodes:
+        analysis:
+            tests:
+                override:
+                    - php-scrutinizer-run
 
 filter:
     paths:
@@ -7,3 +12,7 @@ filter:
 tools:
     external_code_coverage:
         timeout: 600
+    php_loc: true
+    php_pdepend: true
+    php_sim: true
+    php_changetracking: true
