--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -1,44 +1,57 @@
 # https://help.github.com/en/categories/automating-your-workflow-with-github-actions
 
 on:
-  - pull_request
-  - push
+    - pull_request
+    - push
 
 name: "Continuous Integration"
 
 jobs:
-  grumphp:
-    name: "Grumphp"
+    run:
+        name: "Grumphp"
+        runs-on: ${{ matrix.operating-system }}
+        strategy:
+            fail-fast: false
+            matrix:
+                operating-system: [ubuntu-latest, windows-latest, macOS-latest]
+                php-versions: ['7.1', '7.2', '7.3', '7.4']
 
-    runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@master
+              with:
+                  fetch-depth: 1
 
-    strategy:
-      matrix:
-        php-binary:
-          - php7.1
-          - php7.2
-          - php7.3
+            - name: Install PHP
+              uses: shivammathur/setup-php@master
+              with:
+                  php-version: ${{ matrix.php-versions }}
+                  extensions: mbstring,xdebug
+            - name: Get Composer Cache Directory
+              id: composer-cache
+              run: echo "::set-output name=dir::$(composer config cache-files-dir)"
 
-    steps:
-      - name: "Checkout"
-        uses: actions/checkout@master
-        with:
-            fetch-depth: 1
+            - name: Cache dependencies
+              uses: actions/cache@v1
+              with:
+                  path: ${{ steps.composer-cache.outputs.dir }}
+                  key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
+                  restore-keys: ${{ runner.os }}-composer-
 
-      - name: "Composer install"
-        run: ${{ matrix.php-binary }} $(which composer) install --no-interaction --no-progress --no-suggest
+            - name: Install dependencies
+              run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
 
-      - name: "Composer install lowest dependencies"
-        if: matrix.dependencies == 'lowest'
-        run: ${{ matrix.php-binary }} $(which composer) update --no-interaction --no-progress --no-suggest --prefer-lowest
+            - name: Run Grumphp
+              run: vendor/bin/grumphp run --no-ansi -n
+              env:
+                  STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_DASHBOARD_API_KEY }}
 
-      - name: "Install Graphviz"
-        run: sudo apt-get install graphviz
+            - name: Send PSALM data
+              run: vendor/bin/psalm --shepherd --stats
+              continue-on-error: true
 
-      - name: "Run Grumphp"
-        run: ${{ matrix.php-binary }} vendor/bin/grumphp run
-        env:
-            STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_DASHBOARD_API_KEY }}
-
-      - name: "Scrutinizer"
-        run: wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
+            - name: Scrutinizer
+              run: |
+                  wget https://scrutinizer-ci.com/ocular.phar
+                  php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
+              continue-on-error: true
