--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "product"
     ],
     "homepage": "https://github.com/drupol/phpermutations",
-    "license": "GPL-3.0-only",
+    "license": "MIT",
     "authors": [
         {
             "name": "Pol Dellaiera",
@@ -24,10 +24,9 @@
         "php": ">= 7.1.3"
     },
     "require-dev": {
-        "drupol/php-conventions": "^1.6.8",
+        "drupol/php-conventions": "^1.7.1",
         "phpunit/php-code-coverage": "^4 || ^5",
-        "phpunit/phpunit": "^6 || ^7",
-        "symfony/process": "^4.4.1"
+        "phpunit/phpunit": "^6 || ^7"
     },
     "config": {
         "sort-packages": true
